examples/java/failing/adding_two_implements/ExpectedCurrently.java
<<<<<<< LEFT
class SomeClass implements Foo {
||||||| BASE
class SomeClass  {
=======
class SomeClass implements Bar {
>>>>>>> RIGHT
        void doTheWork() {
        }
}
